--- a/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -1,7 +1,7 @@
 <!-- Brand Logo -->
 <a [routerLink]="['/']" class="brand-link">
     <img
-        src="assets/img/logo/logo-icon.jpg"
+        src="assets/img/logo/logo-icon.png"
         alt="Deskover"
         class="brand-image img-circle elevation-3"
         style="opacity: 0.8"
