--- a/deskover-ecommerce-website/src/main/resources/templates/checkout.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/checkout.html
@@ -72,8 +72,9 @@
 	          <div class="row">
 	            <div class="col-sm-6">
 	              <div class="mb-3">
-	                <label class="form-label" for="checkout-city" >Tỉnh</label>
-	                <select name="province" class="form-select" id="checkout-city" ng-model="form.province" ng-change="change()"  required>
+	                <label class="form-label" for="checkout-city" >Tỉnh/Thành phố</label>
+					<!-- ng-options="item as item.name for item in province" -->
+	                <select name="province" class="form-select" id="checkout-city"  ng-model="form.province" ng-change="change()"  required>
 	                  <option value="">Vui lòng chọn Tỉnh/Thành phố</option>
 	                  <option ng-selected="form.province == item.name" ng-repeat="item in province" ng-value="item.name">{{item.name}}</option>
 	                </select>
@@ -81,9 +82,9 @@
 	            </div>
         	    <div class="col-sm-6">
 	              <div class="mb-3">
-	                <label class="form-label" for="checkout-company">Xã/ Huyện</label>
+	                <label class="form-label" for="checkout-company">Quận/Huyện</label>
 	                <select name="district" class="form-select" id="checkout-city" ng-model="form.district" ng-change="change2()"  required>
-	                  <option value="">Vui lòng chọn Xã/Huyện</option>
+	                  <option value="">Vui lòng chọn Quận/Huyện</option>
 	                  <option name = "district" ng-selected="form.district == item.name" ng-repeat="item in district" ng-value="item.name" >{{item.name}}</option>
 	                </select>
 	              </div>
@@ -92,9 +93,9 @@
 	          <div class="row">
 	            <div class="col-sm-6">
 	              <div class="mb-3">
-	                <label class="form-label" for="checkout-company">Đường</label>
+	                <label class="form-label" for="checkout-company">Phường/Xã</label>
 	                <select name="ward" class="form-select" id="checkout-city" ng-model="form.ward" ng-change="address()"  required>
-	                  <option value="">Vui Lòng chọn đường</option>
+	                  <option value="">Vui Lòng Phường/Xã</option>
 	                  <option name = "ward" ng-selected="form.ward == item.name" ng-repeat="item in ward" ng-value="item.name">{{item.name}}</option>
 	                </select>
 	              </div>
